--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 @keyframes logo-spin {
   from {
-    transform: rotate(0);
+    transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
